--- a/frontend/src/app/pump-settings/pump-settings.component.html
+++ b/frontend/src/app/pump-settings/pump-settings.component.html
@@ -25,15 +25,7 @@
   </mat-card>
   <mat-card fxLayout fxLayout="column">
     <mat-card-title>Feedback</mat-card-title>
-    <div>
-      <mat-slide-toggle
-        [(ngModel)]="settings.feedback_active"
-        color="primary"
-        (change)="onSettingsChange()"
-      >
-        Active
-      </mat-slide-toggle>
-    </div>
+
     <div>
       <mat-slider
         (change)="onSettingsChange()"
@@ -64,11 +56,18 @@
         [(ngModel)]="settings.perform_feedback_hourly"
         color="primary"
         (change)="onSettingsChange()"
+        [disabled]="true"
       >
         Perform Hourly
       </mat-slide-toggle>
     </div>
     <div>
+      <mat-form-field (change)="onSettingsChange()" class="example-form-field">
+        <mat-label>Run Hour (XX:00 (24 Hour))</mat-label>
+        <input matInput type="number" min="0" max="23" [(ngModel)]="settings.pump_activation_time.hour" />
+      </mat-form-field>
+    </div>
+    <!-- <div>
       <mat-label>Activation Time</mat-label>
       <ngb-timepicker
         [disabled]="settings.perform_feedback_hourly"
@@ -78,7 +77,7 @@
        mat-button
        [disabled]="settings.perform_feedback_hourly"
        (click)="onSettingsChange()">Apply</button>
-    </div>
+    </div> -->
     <div>
       <mat-form-field (change)="onSettingsChange()" class="example-form-field">
         <mat-label>Periodicity (days)</mat-label>
@@ -87,7 +86,7 @@
           type="number"
           min="1"
           matTooltip="Run once every this many days"
-          [disabled]="settings.perform_feedback_hourly"
+          [disabled]="true || settings.perform_feedback_hourly"
           [(ngModel)]="settings.pump_activation_period_days"
         />
       </mat-form-field>
