Play a bit with fxLayout

--- a/frontend/src/app/manual-pump-controls/manual-pump-controls.component.html
+++ b/frontend/src/app/manual-pump-controls/manual-pump-controls.component.html
@@ -2,7 +2,7 @@
   fxLayout
   fxLayout="row"
   fxLayoutGap="10px"
-  fxLayoutAlign="space-around"
+  fxLayoutAlign="start"
   fxLayout.xs="column"
 >
 <button mat-stroked-button (click)="onTurnOn()">Turn On</button>
