--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -44,7 +44,7 @@
     <div fxLayout
     fxLayout="row"
     fxLayoutGap="10px"
-    fxLayoutAlign="space-around"
+    fxLayoutAlign="center center"
     fxLayout.xs="column">
       <mat-slide-toggle
         [(ngModel)]="autoUpdate"
@@ -53,9 +53,6 @@
       >
         Auto-Update
       </mat-slide-toggle>
-      <button mat-stroked-button (click)="onSaveUserSettings()">
-        Save Settings
-      </button>
       <button mat-stroked-button (click)="onSaveHistory()">
         Save History
       </button>
