--- a/frontend/src/app/pump-settings/pump-settings.component.html
+++ b/frontend/src/app/pump-settings/pump-settings.component.html
@@ -1,10 +1,4 @@
-<div
-  fxLayout
-  fxLayout="row"
-  fxLayoutGap="10px"
-  fxLayoutAlign="space-around"
-  fxLayout.xs="column"
->
+<div fxLayout fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-around" fxLayout.xs="column">
   <mat-card fxLayout fxLayout="column">
     <mat-card-title>Connection {{ channel }}</mat-card-title>
     <div>
@@ -14,12 +8,7 @@
       </mat-form-field>
       <mat-form-field (change)="onSettingsChange()" class="example-form-field">
         <mat-label>Smoothing (Samples)</mat-label>
-        <input
-          matInput
-          min="1"
-          type="number"
-          [(ngModel)]="settings.num_smoothing_samples"
-        />
+        <input matInput min="1" type="number" [(ngModel)]="settings.num_smoothing_samples" />
       </mat-form-field>
     </div>
   </mat-card>
@@ -27,22 +16,11 @@
     <mat-card-title>Feedback</mat-card-title>
 
     <div>
-      <mat-slider
-        (change)="onSettingsChange()"
-        min="0"
-        max="100"
-        step="0.5"
-        [(ngModel)]="settings.feedback_setpoint_pcnt"
-      ></mat-slider>
+      <mat-slider (change)="onSettingsChange()" min="0" max="100" step="0.5"
+        [(ngModel)]="settings.feedback_setpoint_pcnt"></mat-slider>
       <mat-form-field (change)="onSettingsChange()" class="example-form-field">
         <mat-label>Target Humidity (%)</mat-label>
-        <input
-          matInput
-          min="0"
-          max="100"
-          type="number"
-          [(ngModel)]="settings.feedback_setpoint_pcnt"
-        />
+        <input matInput min="0" max="100" type="number" [(ngModel)]="settings.feedback_setpoint_pcnt" />
       </mat-form-field>
     </div>
     <div>
@@ -52,18 +30,14 @@
       </mat-form-field>
     </div>
     <div>
-      <mat-slide-toggle
-        [(ngModel)]="settings.perform_feedback_hourly"
-        color="primary"
-        (change)="onSettingsChange()"
-        [disabled]="true"
-      >
+      <mat-slide-toggle [(ngModel)]="settings.perform_feedback_hourly" color="primary" (change)="onSettingsChange()"
+        [disabled]="true">
         Perform Hourly
       </mat-slide-toggle>
     </div>
     <div>
       <mat-form-field (change)="onSettingsChange()" class="example-form-field">
-        <mat-label>Run Hour (XX:00 (24 Hour))</mat-label>
+        <mat-label>Run Hour ({{ settings.pump_activation_time.hour }}:00 (24 Hour))</mat-label>
         <input matInput type="number" min="0" max="23" [(ngModel)]="settings.pump_activation_time.hour" />
       </mat-form-field>
     </div>
@@ -74,21 +48,15 @@
         [(ngModel)]="settings.pump_activation_time"
       ></ngb-timepicker>
       <button
-       mat-button
+       mat-stroked-button
        [disabled]="settings.perform_feedback_hourly"
        (click)="onSettingsChange()">Apply</button>
     </div> -->
     <div>
       <mat-form-field (change)="onSettingsChange()" class="example-form-field">
         <mat-label>Periodicity (days)</mat-label>
-        <input
-          matInput
-          type="number"
-          min="1"
-          matTooltip="Run once every this many days"
-          [disabled]="true || settings.perform_feedback_hourly"
-          [(ngModel)]="settings.pump_activation_period_days"
-        />
+        <input matInput type="number" min="1" matTooltip="Run once every this many days"
+          [disabled]="true || settings.perform_feedback_hourly" [(ngModel)]="settings.pump_activation_period_days" />
       </mat-form-field>
     </div>
     <!-- <div>
@@ -100,29 +68,31 @@
 
   <mat-card fxLayout fxLayout="column">
     <mat-card-title>Humidity Calibration</mat-card-title>
-    <div>
+    <div fxLayout fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center" fxLayout.xs="column">
       <mat-form-field (change)="onSettingsChange()" class="example-form-field">
         <mat-label>Dry Soil (V)</mat-label>
         <input matInput type="number" min="0" max="3.3" [(ngModel)]="settings.dry_humidity_V" />
       </mat-form-field>
-      <button mat-button (click)="onTakeCurrentHumidityAsDry()">
-        Take Current
+      <button mat-stroked-button (click)="onTakeCurrentHumidityAsDry()">
+        Current
       </button>
     </div>
-    <div>
+    <div fxLayout fxLayout="row" fxLayoutGap="5px" fxLayoutAlign="center center" fxLayout.xs="column">
       <mat-form-field (change)="onSettingsChange()" class="example-form-field">
         <mat-label>Wet Soil (V)</mat-label>
         <input matInput type="number" min="0" max="3.3" [(ngModel)]="settings.wet_humidity_V" />
       </mat-form-field>
-      <button mat-button (click)="onTakeCurrentHumidityAsWet()">
-        Take Current
+      <button mat-stroked-button (click)="onTakeCurrentHumidityAsWet()">
+        Current
       </button>
     </div>
   </mat-card>
 </div>
-<button mat-button (click)="onRefreshSettings()">
-  Refresh
-</button>
-<button mat-button (click)="onSaveSettings()">
-  Save
-</button>
+<div fxLayout fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="center" fxLayout.xs="column">
+  <button mat-stroked-button (click)="onRefreshSettings()">
+    Refresh
+  </button>
+  <button mat-stroked-button (click)="onSaveSettings()">
+    Save
+  </button>
+</div>
